--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
  
-<audio src="" class="speech" hidden></audio>
+<audio src="" id="audio1" hidden></audio>
+<audio src="" id="audio2" hidden></audio>
+<audio src="" id="audio3" hidden></audio>
 
 	<h2>Cat Chat</h2>
 	<h4 class="comment"> All the cats, all the time.</h4>
