fixing first retrieval of signin data

--- a/index.html
+++ b/index.html
@@ -40,13 +40,27 @@
                 if (!user.existed()) {
                        alert("User signed up and logged in through Facebook!"); 
                        FB.api('/me', {fields: 'last_name, first_name, name'}, function(response) {
-                          console.log(response);
-                      });
+                      console.log(response);
+                      var currentUser = Parse.User.current();
+                      currentUser.fetch();
+                      console.log(currentUser);
+                      currentUser.set("first_name", response.first_name);
+                      currentUser.set("last_name", response.last_name);
+                      currentUser.set("full_name", response.name);
+                      currentUser.save();
+                    });
 
-                      FB.api('me/picture?width=160&height=160', function(response){
-                          console.log(response);
-                          
-                      });  
+                    FB.api('me/picture?width=160&height=160', function(response) {
+                    console.log(response);
+                    var currentUser = Parse.User.current();
+                    currentUser.fetch();
+                    console.log(currentUser);
+                    currentUser.set("profile_pic_url", response.data.url);
+                    currentUser.save();
+                    });
+                       alert("User logged in through Facebook!");
+
+                    
                 }     
                 else {
                     FB.api('/me', {fields: 'last_name, first_name, name'}, function(response) {
