--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   the FB.login() function when clicked.
 -->
 <div id="above-facebook-login"><h1>to enter this game YOU MUST</h1>></div>
-<div id="facebook-login"><h1>LOG IN WITH FACEBOOK ---> <h1><button></button></div>
+<div id="facebook-login"><h1>LOG IN WITH FACEBOOK ---> </h1><button></button></div>
 
 <div id="status">
 </div>
