--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
   the JavaScript SDK to present a graphical Login button that triggers
   the FB.login() function when clicked.
 -->
-<div id="above-facebook-login"><h1>to enter this game YOU MUST</h1>></div>
-<div id="facebook-login"><h1>LOG IN WITH FACEBOOK ---> </h1><button></button></div>
+<div id="above-facebook-login"><h1>to enter <strong>friend invaders</strong> YOU MUST</h1>></div>
+<div id="facebook-login"><h1>LOG IN WITH FACEBOOK</h1><br/><button></button></div>
 
 <div id="status">
 </div>
