--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 
                 console.log('boo');
                 $('#leveltitle').append("are you ready to MURDER your friends?");
-     
+                   $('#phaser-example').html('<button id="gotochoose">kill</button>');
 
                       console.log('king kong');
                       alert("User signed up and logged in through Facebook!"); 
