--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
             success: function(user) {
                 
                 console.log('boo');
-                $('#leveltitle').append("are you ready to MURDER your friends?");
-                   $('#phaser-example').html('<button id="gotochoose">kill</button>');
+                
 
                       console.log('king kong');
                       alert("User signed up and logged in through Facebook!"); 
@@ -123,7 +122,7 @@
   the JavaScript SDK to present a graphical Login button that triggers
   the FB.login() function when clicked.
 -->
-<div id="above-facebook-login"><h1>to enter <strong>friend invaders</strong> YOU MUST</h1>></div>
+<div id="above-facebook-login"><h1>to enter <strong>FRIEND INVADERS</strong> you must</h1></div>
 <div id="facebook-login"><h1>LOG IN WITH FACEBOOK</h1><br/><button></button></div>
 
 <div id="status">
