--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         Parse.FacebookUtils.logIn("user_friends, public_profile", {
             success: function(user) {
                 $('#facebook-login').hide();
-                $('above-facebook-login').hide();
+                $('#above-facebook-login').hide();
                 $('#phaser-example').show();
       $('#leveltitle').show();
                 console.log('boo');
