--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             success: function(user) {
                 $('#facebook-login').hide();
                 $('#above-facebook-login').hide();
-              
+
                 $('#phaser-example').show();
       $('#leveltitle').show();
                 console.log('boo');
@@ -64,6 +64,7 @@
      });
 
      FB.api('me/picture?width=160&height=160', function(response) {
+      console.log(reponse);
                     
           var currentUser = Parse.User.current();
             currentUser.fetch({
