spelled response wrong

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
      });
 
      FB.api('me/picture?width=160&height=160', function(response) {
-      console.log(reponse);
+      console.log(response);
                     
           var currentUser = Parse.User.current();
             currentUser.fetch({
