--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@
   the JavaScript SDK to present a graphical Login button that triggers
   the FB.login() function when clicked.
 -->
+<header><h1 font-size="40px">friend invaders</h1>
+    <button id="themesong">theme song</button>
+    <button id="logout">logout</button>
+    <button id="choosevictims">choose victims</button>
+    <button id="highscores">high scores</button>
+
+</header>
 <div id="above-facebook-login"><h1>to enter <strong>FRIEND INVADERS</strong> you must</h1></div>
 <div id="facebook-login"><h1>LOG IN WITH FACEBOOK</h1><br/><button></button></div>
 
@@ -93,6 +100,17 @@
 	<div id="leveltitle"></div><br/>
 	<div id="phaser-example"></div>
   <div id="phaser-example2"></div>
+  <div id="levels">
+    <button id="level1">LeveL One Easy-Peasy</button><br/>
+    <button id="level2">LeveL Two Rotate</button><br/>
+    <button id="level3">LeveL Three Rain</button><br/>
+    <button id="level4">LeveL Four Bouncey</button><br/>
+    <button id="level5">LeveL Five Backwords</button><br/>
+    <button id="level6">LeveL Six Madhouse</button><br/>
+    <button id="level7">LeveL Seven Heck on Earth</button><br/>
+    <button id="level8">LeveL Eight Friend-o-Mania</button><br/>
+
+  </div>
 	<div id="chooserlistcontainer">
 		<div id="watchlist"></div>
 		<div id="chosen"></div>
