--- a/index.html
+++ b/index.html
@@ -79,6 +79,20 @@
   Below we include the Login Button social plugin. This button uses
   the JavaScript SDK to present a graphical Login button that triggers
   the FB.login() function when clicked.
+  $('header').hide();
+  $('#above-facebook-login').hide();
+  $('#facebook-login').hide();
+  $('#phaser-example').hide();
+  $('#status').hide();
+  $('#container').hide();
+  $('#leveltitle').hide();
+  $('#phaser-example').hide();
+  $('#phaser-exampe2').hide();
+  $('#levels').hide();
+  $('#chooselistcontainer').hide();
+  $('#watchlist').hide();
+  $('#chosen').hide();  
+  
 -->
 <header><h1 font-size="40px">friend invaders</h1>
     <button id="themesong">theme song</button>
