--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 </header>
 <div id="above-facebook-login"><h1>to enter <strong>FRIEND INVADERS</strong> you must</h1></div>
-<div id="facebook-login"><h1>LOG IN WITH FACEBOOK</h1><br/><button>log me in with the facebooks</button></div>
+<div id="facebook-login"><h1>LOG IN WITH FACEBOOK</h1><br/><button>LOG ME IN NOW!!</button></div>
 
 <div id="status">
 </div>
