--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 <header><h1 font-size="40px">friend invaders</h1>
     <button id="themesong">theme song</button>
     <button id="logout">logout</button>
-    <button id="choosevictims">choose victims</button>
+    <button id="choosevictims">victim picker</button>
     <button id="highscores">high scores</button>
 
 </header>
