--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   $('#chosen').hide();  
   
 -->
-<header><h1 font-size="40px">friend invaders</h1>
+<header>
     <button id="themesong">theme song</button>
     <button id="logout">logout</button>
     <button id="choosevictims">victim picker</button>
