level buttons stopped working

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 	<div id="phaser-example"></div>
   <div id="phaser-example2"></div>
   <div id="levels">
+    <h1>pick a level!</h1>
     <button id="level1">LeveL One Easy-Peasy</button><br/>
     <button id="level2">LeveL Two Rotate</button><br/>
     <button id="level3">LeveL Three Rain</button><br/>
