fix first page flash

--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
    
      
   <script>
+  $('header').hide();
+  $('#above-facebook-login').show();
+  $('#facebook-login').show();
+  $('#phaser-example').hide();
+  $('#status').hide();
+  $('#container').show();
+  $('#leveltitle').hide();
+  $('#phaser-example').hide();
+  $('#phaser-example2').hide();
+  $('#levels').hide();
+  $('#chooselistcontainer').hide();
+  $('#watchlist').hide();
+  $('#chosen').hide();  
   Parse.initialize("n3pY1RgYj6joprnEw22uqgnrKuCjlOXUxzq2hWhl", "LqdhjBO6ENSnsk7z7N4k4sfQw7eOv7ewC8kl1cV5");
 
   window.fbAsyncInit = function() {
