--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <button id="highscores">high scores</button>
 
 </header>
-<div id="above-facebook-login"><h1>to enter <strong>FRIEND INVADERS</strong> you must</h1></div>
+<div id="above-facebook-login"><h1>to benter <strong>FRIEND INVADERS</strong> you must</h1></div>
 <div id="facebook-login"><h1>LOG IN WITH FACEBOOK</h1><br/><button>LOG ME IN NOW!!</button></div>
 
 <div id="status">
