--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 <header>
     <button id="themesong">theme song</button>
     <button id="logout">logout</button>
-    <button id="choosevictims">victim picker</button>
+    <button id="choosevictims">restart</button>
     <button id="highscores">high scores</button>
 
 </header>
