--- a/index.html
+++ b/index.html
@@ -109,25 +109,25 @@
   $('#chosen').hide();  
   
 -->
-<header>
+<header class="about highscores logout choosefriendstokill">
     <button id="themesong">theme song</button>
     <button id="logout">logout</button>
     <button id="choosevictims">restart</button>
     <button id="highscores">high scores</button>
 
 </header>
-<div id="above-facebook-login"><h1>to enter <strong>FRIEND INVADERS</strong> you must</h1></div>
-<div id="facebook-login"><h1>LOG IN WITH FACEBOOK</h1><br/><button>LOG ME IN NOW!!</button></div>
+<div id="above-facebook-login" class="login"><h1>to enter <strong>FRIEND INVADERS</strong> you must</h1></div>
+<div id="facebook-login" class="login"><h1>LOG IN WITH FACEBOOK</h1><br/><button>LOG ME IN NOW!!</button></div>
 
 <div id="status">
 </div>
 
-	<main id="container">
+	<main id="container" class="login">
 		
 		
 	</main>
-	<div id="leveltitle"></div><br/>
-	<div id="phaser-example"></div>
+	<div id="leveltitle" class="login"></div><br/>
+	<div id="phaser-example" class="login"></div>
   <div id="phaser-example2"></div>
   <div id="levels">
     <h1>pick a level!</h1>
