--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>FRIEND INVADERS!!!</title>
+  <link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/>
 	<link rel="stylesheet" type="text/css" href="scripts/style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="//www.parsecdn.com/js/parse-1.4.2.min.js"></script>
