--- a/index.html
+++ b/index.html
@@ -132,6 +132,9 @@
   <div id="phaser-example2"></div>
   <div id="levels">
     <h1>pick a level!</h1>
+    <h1> directions </h1>
+    <h1> click game screen to start playing</h1>
+    <h1> arrows to move, space to fire</h1>
     <button id="level1">LeveL One Easy-Peasy</button><br/>
     <button id="level2">LeveL Two Rotate</button><br/>
     <button id="level3">LeveL Three Rain</button><br/>
