wish it worked on mobile

--- a/index.html
+++ b/index.html
@@ -131,18 +131,21 @@
 	<div id="phaser-example" class="login"></div>
   <div id="phaser-example2"></div>
   <div id="levels">
-    <h1>pick a level!</h1>
+   
     <h1> directions </h1>
     <h1> click game screen to start playing</h1>
     <h1> arrows to move, space to fire</h1>
-    <button id="level1">LeveL One Easy-Peasy</button><br/>
-    <button id="level2">LeveL Two Rotate</button><br/>
-    <button id="level3">LeveL Three Rain</button><br/>
+    <br/>
+    <br/>
+    <h1>pick a level!!</h1>
+    <button id="level1">LeveL One Easy-Peasy</button>
+    <button id="level2">LeveL Two Rotate</button>
+    <button id="level3">LeveL Three Rain</button>
     <button id="level4">LeveL Four Bouncey</button><br/>
-    <button id="level5">LeveL Five Backwords</button><br/>
-    <button id="level6">LeveL Six Madhouse</button><br/>
-    <button id="level7">LeveL Seven Heck on Earth</button><br/>
-    <button id="level8">LeveL Eight Friend-o-Mania</button><br/>
+    <button id="level5">LeveL Five Backwords</button>
+    <button id="level6">LeveL Six Madhouse</button>
+    <button id="level7">LeveL Seven Heck on Earth</button>
+    <button id="level8">LeveL Eight Friend-o-Mania</button>
 
   </div>
 	<div id="chooserlistcontainer">
