--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 </header>
 <div id="above-facebook-login" class="login"><h1>to enter <strong>FRIEND INVADERS</strong> you must</h1></div>
-<div id="facebook-login" class="login"><h1>LOG IN WITH FACEBOOK</h1><br/><button>LOG ME IN NOW!!</button></div>
+<div id="facebook-login" class="login"><h1>LOG IN WITH FACEBOOK</h1><br/><button>LOG ME IN NOW!!</button><div class="fb-like" data-href="http://keithreynoldsworld.github.io" data-layout="standard" data-action="like" data-show-faces="false" data-share="true"></div></div>
 
 <div id="status">
 </div>
