better directions for players

--- a/index.html
+++ b/index.html
@@ -132,9 +132,10 @@
   <div id="phaser-example2"></div>
   <div id="levels">
    
-    <h1> directions </h1>
-    <h1> click game screen to start playing</h1>
-    <h1> arrows to move, space to fire</h1>
+    <h1> DIRECTIONS </h1><br/>
+    <h1>FIRST! pick a level</h1>
+    <h1>SECOND! click game screen to start playing</h1>
+    <h1>THIRD! arrows to move, space to fire</h1>
     <br/>
     <br/>
     <h1>pick a level!!</h1>
