--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 	<title>FRIEND INVADERS!!!</title>
+  <meta property="og:title"
+content="git ta shootin' yer friends on the facebooks" />
+<meta property="og:site_name" content="Friend Invaders"/>
+<meta property="og:url"
+content="http://keithreynoldsworld.github.io" />
   <link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/>
 	<link rel="stylesheet" type="text/css" href="scripts/style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -129,7 +134,9 @@
 	</main>
 	<div id="leveltitle" class="login"></div><br/>
 	<div id="phaser-example" class="login"></div>
-  <div id="phaser-example2"></div>
+  <div id="phaser-example2">
+    <div class="fb-comments" data-href="http://keithreynoldsworld.github.io" data-width="500px" data-numposts="5"></div>
+  </div>
   <div id="levels">
    
     <h1> DIRECTIONS </h1><br/>
