--- a/index.html
+++ b/index.html
@@ -119,9 +119,10 @@ content="http://keithreynoldsworld.github.io" />
     <button id="themesong">theme song</button>
     <button id="logout">logout</button>
     <button id="choosevictims">restart</button>
-  
+    <button id="realchoosevictims">choose victims</button>
+    <button id="levelbutton">levels</button>
     <button id="highscores">high scores</button>
-
+<hr/>
 </header>
 <div id="above-facebook-login" class="login"><h1>to enter <strong>FRIEND INVADERS</strong> you must</h1></div>
 <div id="facebook-login" class="login"><h1>LOG IN WITH FACEBOOK</h1><br/><button>LOG ME IN NOW!!</button><div class="fb-like" data-href="http://keithreynoldsworld.github.io" data-layout="standard" data-action="like" data-show-faces="false" data-share="true"></div></div>
