--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ content="http://keithreynoldsworld.github.io" />
   
 -->
 <header class="about highscores logout choosefriendstokill">
-    <button id="comments">theme song</button>
+    <button id="themesong">comments</button>
     <button id="logout">logout</button>
     <button id="choosevictims">restart</button>
     <button id="realchoosevictims">choose victims</button>
