and it is working

--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@ content="http://keithreynoldsworld.github.io" />
     <br/>
     <h1>pick a level!!</h1>
     <button id="level1">LeveL One Easy-Peasy</button>
-    <button id="level2">LeveL Two Rotate</button>
-    <button id="level3">LeveL Three Rain</button>
-    <button id="level4">LeveL Four Bouncey</button><br/>
-    <button id="level5">LeveL Five Backwords</button>
+    <button id="level2">LeveL Two Bouncy</button>
+    <button id="level3">LeveL Three One Life to Live</button>
+    <button id="level4">LeveL Four Rotate</button><br/>
+    <button id="level5">LeveL Five Rain</button>
     <button id="level6">LeveL Six Madhouse</button>
     <button id="level7">LeveL Seven Heck on Earth</button>
     <button id="level8">LeveL Eight Friend-o-Mania</button>
